Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -22,7 +22,6 @@
     width: 100%;
     height: 100vh;
     transform: translateZ(-50px) scale(1.5);
-    opacity: 0;
 }
 
 .truck > div {
